# coffee-order-service

./: .envrc  .gitignore  Makefile  README.md  example.envrc  main.py  pyproject.toml
.github/workflows/: ci.yml
bot/: main.py
bot/app/: main.py
bot/handlers/: history_handler.py  make_order_handler.py  settings_handler.py  start_handler.py
bot/keyboards/: history_message_kb.py  start_message_kb.py
infra/: Dockerfile  docker-compose.yaml  init.sql
src/api/application/: errors.py
src/api/application/schemas/: product.py  user.py
src/api/infra/database/: common.py  provider.py
src/api/infra/database/migrations/versions/: 0b173c7d4747_add_user_model.py  6a9b87b070c0_init.py  8419e7aab77d_init.py  babe315b24a8_add_products.py
src/api/infra/database/tables/: __init__.py  base.py  product.py  products.py  user.py
src/api/presentation/fastapi/routes/: auth.py  products.py  setup.py
src/core/: config.py
