[project]
name = "coffee-order-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "adaptix>=3.0.0b11",
    "dishka>=1.7.2",
    "dynaconf>=3.2.12",
    "fastapi>=0.119.0",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]
